k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
  labels:
    app: postgre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
      - name: postgre
        image: postgres:latest
        ports:
        - containerPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-shop
  labels:
    app: fake-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-shop
  template:
    metadata:
      labels:
        app: fake-shop
    spec:
      containers:
      - name: fake-shop
        image: wellingtonevolution/fake-shop:latest
        ports:
        - containerPort: 5000
