k8s/fake-shop-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-shop
  labels:
    app: fake-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-shop
  template:
    metadata:
      labels:
        app: fake-shop
    spec:
      nodeSelector:
        workload: fake-shop
      containers:
      - name: fake-shop
        image: wellingtonevolution/fake-shop:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fake-shop
spec:
  type: ClusterIP
  selector:
    app: fake-shop
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 5000
