k8s/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector:
    app: postgre
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: fake-shop
spec:
  type: LoadBalancer
  selector:
    app: fake-shop
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
