k8s/fake-shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-shop-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: <your-acm-certificate-arn>
spec:
  rules:
    - host: <your-domain.com>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake-shop
                port:
                  number: 80
